--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "@space-labs/hermes",
+  "name": "@space-labs/warp",
   "version": "0.0.1",
   "reason": { "react-jsx": 3 },
   "bsc-flags": ["-bs-super-errors"],
