--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@space-labs/warp",
   "description": "Warp is a Bucklescript library enabling http-requests over XHR",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "homepage": "https://github.com/eWert-Online/warp#readme",
+  "bugs": "https://github.com/eWert-Online/warp/issues",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eWert-Online/warp.git"
+  },
   "scripts": {
     "prepare": "npm run build",
     "build": "bsb -clean-world && bsb -make-world",
